crates-next/otter-vm/tests/compile_fail/raw_write_barrier_rejected.stderr
error[E0624]: method `write_barrier_raw` is private
 --> tests/compile_fail/raw_write_barrier_rejected.rs:9:10
  |
9 |       heap.write_barrier_raw(parent, slot, child);
  |            ^^^^^^^^^^^^^^^^^ private method
  |
 ::: $WORKSPACE/crates-next/otter-gc/src/heap.rs
  |
  | /     pub(crate) fn write_barrier_raw<T: ?Sized>(
  | |         &mut self,
  | |         parent: Gc<T>,
  | |         slot_addr: *mut RawGc,
  | |         child: RawGc,
  | |     ) {
  | |_____- private method defined here
